# tree2project

./: .gitignore  README.md  main.py  project_sample_structure.txt  pyproject.toml  structure.txt
src/tree2project/: __init__.py  cli.py  creator.py  exporter.py  parser.py  validator.py
src/tree2project/commands/: create.py  export.py  validate.py
tests/: test_exporter.py  test_parser.py
